# doom

./: CMakeLists.txt  makefile
include/: load_wad.c  platform_sdl.h  renderer.h
include/SDL2/: SDL_locale.h
old/: platform_sdl.c  renderer.c
src/: main.c  platform_sdl.c
